--- a/src/head-content.html
+++ b/src/head-content.html
@@ -1,1 +1,8 @@
 <link rel="icon" type="image/png" href="./assets/favicon.png" />
+<link rel="stylesheet" href="./css/font-awesome.min.css">
+<link rel="stylesheet" href="./css/regular.min.css">
+<link rel="stylesheet" href="./css/solid.min.css">
+<link rel="stylesheet" href="./css/toasty.css">
+<link rel="stylesheet" href="./css/default.css" type="text/css" media="screen, projection">
+<link rel="alternate stylesheet" href="./css/dark.css" title='dark' type="text/css" media="screen, projection" disabled="">
+<script src="imagesMaps.js"></script><script src="imagesBattlers.js"></script>
