--- a/src/head-content.html
+++ b/src/head-content.html
@@ -4,5 +4,7 @@
 <link rel="stylesheet" href="./css/solid.min.css">
 <link rel="stylesheet" href="./css/toasty.css">
 <link rel="stylesheet" href="./css/default.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="./css/light.css" type="text/css" media="screen, projection">
+<link rel="alternate stylesheet" href="./css/gray.css" title='gray' type="text/css" media="screen, projection" disabled="">
 <link rel="alternate stylesheet" href="./css/dark.css" title='dark' type="text/css" media="screen, projection" disabled="">
-<script src="imagesMaps.js"></script><script src="imagesBattlers.js"></script>
+<script src="imagesMaps.js"></script><script src="imagesBattlers.js"></script><script src="imagesEquip.js"></script><script src="imagesIcons.js"></script><script src="imagesScene.js"></script>
