--- a/src/head-content.html
+++ b/src/head-content.html
@@ -7,4 +7,4 @@
 <link rel="stylesheet" href="./css/light.css" type="text/css" media="screen, projection">
 <link rel="alternate stylesheet" href="./css/gray.css" title='gray' type="text/css" media="screen, projection" disabled="">
 <link rel="alternate stylesheet" href="./css/dark.css" title='dark' type="text/css" media="screen, projection" disabled="">
-<script src="imagesMaps.js"></script><script src="imagesBattlers.js"></script><script src="imagesEquip.js"></script><script src="imagesIcons.js"></script><script src="imagesScene.js"></script>
+<script src="imagesMaps.js"></script><script src="imagesBattlers.js"></script><script src="imagesEquip.js"></script><script src="imagesIcons.js"></script><script src="imagesScenes.js"></script>
